# auto-syncer

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
messages/: counter_number.proto
native/hub/: Cargo.toml
native/hub/src/: lib.rs  with_request.rs
native/syncer/: Cargo.toml
native/syncer/src/server/: mod.rs
native/syncer/src/server/codec/: codecer.rs  mod.rs
web/: index.html
windows/: CMakeLists.txt
