[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
flexi_logger = "0.27.2"
futures = "0.3.29"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9" , features = ["codec"] }
rmp-serde = "1.1.2"
